--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^11.11.17",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.563.0",
-    "next": "15.1.0",
+    "next": "^16.1.6",
     "pdf-parse": "^2.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
